--- a/Resume.tex
+++ b/Resume.tex
@@ -85,7 +85,7 @@
       {Bachelor of Science in Computer Engineering;  GPA: 3.4}{Expected Graduation 2020}
       \resumeItemListStart
         \resumeItem{Relevant Coursework}
-          {Adv. Programming Techniques, Business Statistics, Design with Microcontrollers, Digital Logic Design, Electric Circuits, Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Physics I, II, Networking}
+          {Adv. Programming Techniques, Business Statistics, Design with Microcontrollers Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Physics I, II, Networking}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -93,6 +93,19 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {Comcast}{Philadelphia, PA}
+      {Data Engineering Co-op}{May 2018 - Present}
+      \resumeItemListStart
+        \resumeItem{Metadata Search Engine}
+          {Increased data accessibility and understanding by developing a full-stack metadata search-engine using Flask and ElasticSearch. Reformatted ElasticSearch database in order to improve query time and application scalability. }
+        \resumeItem{Data Manager API}
+          {Eliminated need for manual maintenance of Oracle database by creating a Java REST API using Spring-Boot and JPA. Implemented continuous deployment using Jenkins. Remained flexible and open to new requested features.}
+        \resumeItem{Employee Training}
+          {Gave presentations and demos to fellow Comcast employees on topics including: REST APIs, JPA, application frameworks, Jenkins, continuous deployment.}
+      \resumeItemListEnd
+
 
     \resumeSubheading
       {G3 Technologies}{Mt. Airy, MD}
@@ -110,24 +123,16 @@
 
     \resumeSubheading
       {Drexel NanoPhotonics Lab}{Philadelphia, PA}
-      {Lab Assistant}{Sept 2017 - Present}
+      {Lab Assistant}{Sept 2017 - March 2018}
       \resumeItemListStart
+       \resumeItem{Stage Automation}
+          {Increase research efficiency by creating MATLAB programs to control and automate the use of optical stages. Eliminated previously needed calibration methods in the production of new imaging filters}
         \resumeItem{Optics Research}
           {Collaborate with researchers in the creation and testing of optical imaging filters. Utilize Class 3 lasers to ensure functionality of H-PDLC samples. Effectively collect and present research data. }
-        \resumeItem{Organization}
-          {Increase lab efficiency by cataloging test, optomechanical, and laser equipment. Manage the purchase, shipping, and handling of research equipment.}
+       
 
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Loyola University Physics Lab}{Baltimore, MD}
-      {Lab Assistant}{Aug 2015 - May 2016}
-      \resumeItemListStart
-        \resumeItem{Moon Phase Research}
-          {Organized and digitally presented research on moon phases. Increased data accuracy by removing bad data from sets of high-resolution moon photographs. }
-        \resumeItem{Schedule Management}
-          {Decreased time conflicts between researchers and professors by creating a department time schedule, used to reserve lab space.}
-      \resumeItemListEnd
 
 
   \resumeSubHeadingListEnd
@@ -138,10 +143,11 @@
   \resumeSubHeadingListStart
     \resumeSubItem{Lego NZXT Robot}
       {Robotics project that uses Lego hardware and search algorithms to compete in object retrieval challenges. Collaborated in a team of four to incorporate color, light, and motion sensors. Received second place in 2016 Drexel Design Lab Challenge.}
+      \resumeSubItem{Python Search Auto-Complete}
+      {Program that allows incorporation of auto-completion in search engines. Learns common word problems using Markovs Algorithim. }
     \resumeSubItem{Interview Practice App}
       {Android App that allows users to practice interview questions and record their answers.}
-    \resumeSubItem{Python Blackjack}
-      {Program that implements the game of blackjack in Python. Makes use of object inheritance and simple AI. Features easy to use UI and support for multiple players.}
+    
     
   \resumeSubHeadingListEnd
   
@@ -161,10 +167,10 @@
 \section{Select Skills}
   \resumeSubHeadingListStart
   \resumeSubItem{Languages}
-      {Python, C, MATLAB, R, Java, C++, VHDL, LaTeX, HTML, CSS}
+      {Python, SQL, C, MATLAB, R, Bash, Java, Groovy, C++, VHDL, LaTeX, HTML, CSS}
     \resumeSubItem{Software}
-      {Linux/Unix, Mac OS, Git, Multisim, LabVIEW, ModelSim, Autodesk Inventor, Microsoft Office}
-    \resumeSubItem{Test Equipment}
+      {Linux/Unix, Mac OS, Git, Jenkins, Spring-Boot, Flask, Play, Oracle, MySQL, LabView, Autodesk Inventor}
+    \resumeSubItem{Test Equitment}
       {Signal Generator, Network Analyzer, Spectrum Analyzer, Oscilloscope}
   \resumeSubHeadingListEnd
 
