Update icons in heading

--- a/Resume.tex
+++ b/Resume.tex
@@ -13,6 +13,7 @@
 \usepackage{enumitem}
 \usepackage[pdftex]{hyperref}
 \usepackage{fancyhdr}
+\usepackage{fontawesome}
 
 
 \pagestyle{fancy}
@@ -72,8 +73,9 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{linkedin.com/in/owen-brooks-11531b12b/}{\Large Owen Q. Brooks}} & Email : \href{mailto:oqb23@drexel.edu}{oqb23@drexel.edu}\\
-  \href{http://sourabhbajaj.com/}{linkedin.com/in/owen-brooks-11531b12b/} & Mobile : 240-472-8246 \\
+  \textbf{\LARGE Owen Q. Brooks} & \href{mailto:oqb23@drexel.edu}{oqb23@drexel.edu} \faEnvelopeO\\
+  \href{https://owen-brooks.github.io}{http://owen-brooks.github.io} & 240-472-8246 \faMobilePhone\\
+  
 \end{tabular*}
 
 
@@ -82,7 +84,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Drexel University}{Philadelphia, PA}
-      {Bachelor of Science in Computer Engineering;  GPA: 3.4}{Expected Graduation 2020}
+      {Bachelor of Science in Computer Engineering;  GPA: 3.6}{Expected Graduation 2020}
       \resumeItemListStart
         \resumeItem{Relevant Coursework}
           {Adv. Programming Techniques, Business Statistics, Design with Microcontrollers Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Physics I, II, Networking}
