--- a/Resume.tex
+++ b/Resume.tex
@@ -74,7 +74,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\LARGE Owen Q. Brooks} & \href{mailto:oqb23@drexel.edu}{oqb23@drexel.edu} \faEnvelopeO\\
-  \href{https://owen-brooks.github.io}{http://owen-brooks.github.io} & 240-472-8246 \faMobilePhone\\
+  \href{https://owen-brooks.github.io}{http://owen-brooks.github.io} & 240-472-8246 \faPhone\\
   
 \end{tabular*}
 
