--- a/Resume.tex
+++ b/Resume.tex
@@ -87,7 +87,7 @@
       {Bachelor of Science in Computer Engineering;  GPA: 3.6}{Expected Graduation 2020}
       \resumeItemListStart
         \resumeItem{Relevant Coursework}
-          {Adv. Programming Techniques, Business Statistics, Design with Microcontrollers Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Physics I, II, Networking}
+          {Algorithims, Data Anlaysis, Adv. Programming, Business Statistics, Network Eng., Microcontrollers, Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Physics I, II}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -97,17 +97,17 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Comcadst}{Philadelphia, PA}
+      {Comcast}{Philadelphia, PA}
       {Data Engineering Co-op}{May 2018 - Present}
       \resumeItemListStart
       \resumeItem{Workflow Dashboard}
-          {Designed and built full-stack Spring-Boot application allowing users to monitor data-transfer worflows. Leveraged 3rd party Java API to safely interact with automation software. Created doumentation used by teams trying to incoroporate that API into other projects. }
+          {Designed and built full-stack Spring-Boot application allowing users to monitor data-transfer workflows. Leveraged 3rd party Java API to safely interact with automation software. Created documentation used by teams trying to incorporate that API into other projects. }
         
         \resumeItem{Dev-Ops REST-API}
           {Automated and simplified access to application database by creating a REST API using Spring-Boot and JPA. Researched and implemented continuous deployment using Jenkins and Cloud-Foundry. Leveraged Spring Rest Docs to auto-generate scalable API documentation.
           }
           \resumeItem{Metadata Search App}
-          {Increased data accessibility and understanding by developing a full-stack metadata-search applictaion using Flask and ElasticSearch. Reformatted ElasticSearch database in order to improve query time and application scalability. }
+          {Increased data accessibility and understanding by developing a full-stack metadata-search application using Flask and ElasticSearch. Reformatted ElasticSearch database in order to improve query time and application scalability. }
         \resumeItem{Employee Training}
           {Gave presentations and demos to fellow Comcast employees on topics including: REST APIs, JPA, application frameworks, Jenkins, continuous deployment.}
       \resumeItemListEnd
