--- a/Resume.tex
+++ b/Resume.tex
@@ -73,7 +73,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\LARGE Owen A. Brooks} & \href{mailto:oqb23@drexel.edu}{oqb23@drexel.edu} \\%\faEnvelopeO\\
+  \textbf{\LARGE Owen Q. Brooks} & \href{mailto:oqb23@drexel.edu}{oqb23@drexel.edu} \\%\faEnvelopeO\\
   \href{https://owen-brooks.github.io}{http://owen-brooks.github.io} & 240-472-8246 \\%\faPhone\\
   
 \end{tabular*}
@@ -145,12 +145,13 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{Lego NZXT Robot}
-      {Robotics project that uses Lego hardware and search algorithms to compete in object retrieval challenges. Received second place in 2016 Drexel Design Lab Challenge.}
+    
       \resumeSubItem{Python Search Auto-Complete}
-      {Program that allows incorporation of auto-completion in search engines. Learns common word problems using Markovs Algorithim. }
-    \resumeSubItem{Interview Practice App}
-      {Android App that allows users to practice interview questions and record their answers.}
+      {Scripts that allows incorporation of word and sentence completion in search engines. Learns common word patterns using Markovs Algorithim. }
+    \resumeSubItem{Craigslist Web Scraper}
+      {Web application that allows users to search Craigslist car listings, nationwide. Leverages the BeautifulSoup library to determine URLs and scrape listing data. }
+      \resumeSubItem{Lego NZXT Robot}
+      {Robotics project that uses Lego hardware and search algorithms to compete in object retrieval challenges. Received second place in 2016 Drexel Design Lab Challenge.}
     
     
   \resumeSubHeadingListEnd
