--- a/Resume.tex
+++ b/Resume.tex
@@ -130,9 +130,9 @@
       {Lab Assistant}{Sept 2017 - March 2018}
       \resumeItemListStart
        \resumeItem{Stage Automation}
-          {Increase research efficiency by creating MATLAB programs to control and automate the use of optical stages. Eliminated previously needed calibration methods in the production of new imaging filters}
+          {Increased research efficiency by creating MATLAB programs to control and automate the use of optical stages. Eliminated previously needed calibration methods in the production of new imaging filters}
         \resumeItem{Optics Research}
-          {Collaborate with researchers in the creation and testing of optical imaging filters. Utilize Class 3 lasers to ensure functionality of H-PDLC samples. Effectively collect and present research data. }
+          {Collaborated with researchers in the creation and testing of optical imaging filters. Utilized Class 3 lasers to ensure functionality of H-PDLC samples. Effectively collected and presented research data. }
        
 
       \resumeItemListEnd
