--- a/OwenBrooks-CV.tex
+++ b/OwenBrooks-CV.tex
@@ -109,7 +109,7 @@
           \resumeItem{Metadata Search App}
           {Increased data accessibility and understanding by developing a full-stack metadata-search application. Reformatted ElasticSearch database in order to improve query time and application scalability. }
           \resumeItem{Data Ingestion Automation}
-          {Automated data transfer into Hadoop database with shell scripting. Researched and automated the conversion of shell scripts, and utilities to Python. Validated ingested data with Hive.}
+          {Automated data transfer into Hadoop database with shell scripting. Researched and automated the conversion of shell scripts and utilities to Python. Validated ingested data with Hive.}
           
         \resumeItem{Employee Training}
           {Gave presentations to fellow Comcast employees on topics including: REST APIs, JPA, application frameworks, Jenkins, continuous deployment.}
