--- a/OwenBrooks-CV.tex
+++ b/OwenBrooks-CV.tex
@@ -85,10 +85,6 @@
     \resumeSubheading
       {Drexel University}{Philadelphia, PA}
       {Bachelor of Science in Computer Engineering;  GPA: 3.5}{Expected Graduation 2020}
-      \resumeItemListStart
-        \resumeItem{Relevant Coursework}
-          {Algorithims, Data Analysis, Networking, Business Statistics, Embedded Systems, Discrete Math, Calculus I, II, Multivariate, Linear Algebra, Differential Equations, Digital Logic}
-      \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 
@@ -96,18 +92,36 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
+	\resumeSubheading
+      {Bloomberg L.P.}{Princeton, NJ}
+      {Data Engineering Co-op}{May 2019 - September 2019}
+            \resumeItemListStart
+      \resumeItem{Portfolio Data Migration}
+          {Improved portfolio data quality by developing a data pipeline that featured enrichment, error detection, and crowd-sourced error remediation. Interfaced with various micro-services and API's to load data into new format. Built dashboards for reporting and system analysis.}
+        
+        \resumeItem{Random Sampling Library}
+         {Standardized calculations of precision and recall in data quality projects by developing a Python package for random sampling. Worked with various data teams to build out new features and assist in implementation.
+          }
+          \resumeItem{Company Segments Data Quality}
+          {Automated data quality checks on company segment data by designing and building Python Tornado application. Interfaced with cloud and NoSQL databases to enrich and validate data. Built out error correction pipeline using JIRA project management software. }
+          
+          \resumeItem{Micro-services}
+          {Built python micro-services to automate various tasks such as email parsing, data routing and validation of business rules. }
+      \resumeItemListEnd
+
     \resumeSubheading
       {Comcast}{West Chester, PA}
-      {Data Engineering Co-op}{May 2018 - August 2018}
+      {Software Engineering Co-op}{May 2018 - September 2018}
       \resumeItemListStart
       \resumeItem{Workflow Dashboard}
-          {Designed and built full-stack Spring-Boot application allowing users to monitor data-transfer workflows. Leveraged 3rd party Java API to safely interact with automation software. }
+          {Designed and built full-stack Spring-Boot application allowing users to monitor data-transfer workflows. Leveraged 3rd party Java API to safely interact with automation software. Focused on scalable design to allow easier on-boarding of users.}
         
         \resumeItem{Dev-Ops REST-API}
-          {Automated and simplified access to application database by creating a REST API using Spring-Boot and JPA. Researched and implemented continuous deployment using Jenkins and Cloud-Foundry. Leveraged Spring Rest Docs to auto-generate scalable API documentation.
+          {Simplified access to backend database by creating a REST API using Spring-Boot and JPA. Researched and implemented continuous deployment using Jenkins and Cloud-Foundry. Leveraged Spring Rest Docs to auto-generate scalable API documentation.
           }
           \resumeItem{Metadata Search App}
-          {Increased data accessibility and understanding by developing a full-stack metadata-search application. Reformatted ElasticSearch database in order to improve query time and application scalability. }
+          {Increased data accessibility by developing a full-stack metadata-search application. Reformatted ElasticSearch database in order to improve query time and application scalability. }
+          
           \resumeItem{Data Ingestion Automation}
           {Automated data transfer into Hadoop database with shell scripting. Researched and automated the conversion of shell scripts and utilities to Python. Validated ingested data with Hive.}
           
@@ -118,30 +132,15 @@
 
     \resumeSubheading
       {G3 Technologies}{Mt. Airy, MD}
-      {Software Engineering Co-op}{May 2017 - Sept 2017}
+      {Electrical Engineering Co-op}{May 2017 - Sept 2017}
       \resumeItemListStart
-      \resumeItem{Test Software}
-          {Increased radio production by troubleshooting and fixing bugs found in Python applications. Restructured application interface in order to create a safe, standard user experience. }
-        \resumeItem{Embedded Development}
-          {Eliminated the need for micro-controllers in product development by creating signal-processing algorithms. Implemented and tested created algorithms using FTDI cables.}
-        
-        \resumeItem{RF Tuning And Production}
-          {Exceeded monthly quotas for radio component production. Utilized a variety of mechanical and software tools to test and tune complex receivers, tuners, and their various modules}
-
+      \resumeItem{Hardware Test Application}
+          {Increased radio production by troubleshooting and fixing bugs found in RF test applications. Restructured and simplified application UI. }
+          
+        \resumeItem{Radio R\&D}
+          {Simplified hardware development process by creating C programs to interface with FTDI cables and signal processing scripts. Coordinated with manufacturers to ensure build and functionality of new designs.}
+      
       \resumeItemListEnd
-
-    \resumeSubheading
-      {Drexel NanoPhotonics Lab}{Philadelphia, PA}
-      {Lab Assistant}{Sept 2017 - March 2018}
-      \resumeItemListStart
-       \resumeItem{Stage Automation}
-          {Increased research efficiency by creating MATLAB programs to control and automate the use of optical stages. Eliminated previously needed calibration methods in the production of new imaging filters}
-        \resumeItem{Optics Research}
-          {Collaborated with researchers in the creation and testing of optical imaging filters. Utilized Class 3 lasers to ensure functionality of H-PDLC samples. Effectively collected and presented research data. }
-       
-
-      \resumeItemListEnd
-
 
 
   \resumeSubHeadingListEnd
@@ -157,8 +156,7 @@
       {Flask web-scraping application built to search Craigslist car listings.}
       \resumeSubItem{Owen-brooks.github.io}
       {Personal website and blog with articles on various programming topics. Built with Jekyll.}
-       \resumeSubItem{Drexel Design Project}
-      {Robotics project using Lego hardware and Robot-C search algorithms. Competed and earned second place in object retrieval challenge.}
+
     
     
   \resumeSubHeadingListEnd
@@ -172,8 +170,8 @@
   \resumeSubItem{Languages}
       {(proficient): Python, Java, SQL, Bash, MATLAB, HTML (familiar): C, JavaScript, R,  C++, VHDL}
     \resumeSubItem{Frameworks and Tools}
-      {Git, Jenkins, Jira, Spring-Boot, Flask, Arduino, Hive, Oracle, MySQL, LabView, AutoCAD}
-    \resumeSubItem{Test Equitment}
+      {Git, Jenkins, JIRA, Pandas, Spring-Boot, Flask, Arduino, Hive, Oracle, AWS, NoSQL}
+    \resumeSubItem{Test Equipment}
       {Signal Generator, Network Analyzer, Spectrum Analyzer, Oscilloscope}
   \resumeSubHeadingListEnd
 
@@ -183,7 +181,7 @@
     \resumeSubItem{Drexel Men's Wrestling}
       {Team member and starter on nationally ranked Division I wrestling team.\textit{(2016 - Present)}}
     \resumeSubItem{Beat The Streets Philadelphia}
-      {Peer mentor, tutor and coach for Philadelphia youth. Striving to teach principles of academic and athletic discipline, through the sport of wrestling.\textit{(2017 - Present)}}
+      {Peer mentor, tutor and coach for Philadelphia youth. Striving to teach principles of academic and athletic discipline, through the sport of wrestling.\textit{(2017 - 2018)}}
   \resumeSubHeadingListEnd
 
 %-------------------------------------------
