--- a/OwenBrooks-CV.tex
+++ b/OwenBrooks-CV.tex
@@ -84,7 +84,7 @@
   \resumeSubHeadingListStart
   \resumeSubheading
       {University of Illinois at Urbana-Champaign}{}
-      {Master of Computer Science in Data Science};  GPA: 3.9{Expected Graduation 2023}
+      {Master of Computer Science in Data Science; GPA: 3.9}{Expected Graduation 2023}
     \resumeSubheading
       {Drexel University}{Philadelphia, PA}
       {Bachelor of Science in Computer Engineering;  GPA: 3.5}{Sept 2016 - June 2020}
